objects/AutomationCommand__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Descriptive detail on the purpose, inputs and outputs of the command</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Descriptive detail on the purpose, inputs and outputs of the command</inlineHelpText>
        <label>Description</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImportType__c</fullName>
        <description>This field specifies a specific automation process to which this command belongs. Each automation process has a set of AutomationCommands. The importType field associates commands to a specific automation process.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field specifies a specific automation process to which this command belongs. Each automation process has a set of AutomationCommands. The importType field associates commands to a specific automation process.</inlineHelpText>
        <label>ImportType</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the command invokes a batch process. A batch command status is polled by the system periodically and updated on the page console</description>
        <inlineHelpText>Indicates whether the command invokes a batch process. A batch command status is polled by the system periodically and updated on the page console</inlineHelpText>
        <label>IsBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>Step number of the Standard Operation procedure for this command.</description>
        <inlineHelpText>Step number of the Standard Operation procedure for this command.</inlineHelpText>
        <label>Step</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verb__c</fullName>
        <description>action verb of the command. This denotes the specific command code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>action verb of the command. This denotes the specific command code</inlineHelpText>
        <label>Verb</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AutomationCommand</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AutomationCommand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutomationCommands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>